# snapstepper

./: pyproject.toml
arduino/: snapstepper.ino
snapstepper/: main.py
